fixed project image stretching when doing responsive styling

--- a/src/assets/css/style2.css
+++ b/src/assets/css/style2.css
@@ -436,7 +436,7 @@ div.info-and-form {
 }
 
 /* media queries */
-@media (min-width: 2800px) {
+@media (max-width: 3500px) {
   .projects {
     display: flex;
   }
@@ -446,7 +446,7 @@ div.info-and-form {
   }
 }
 
-@media (max-with: 2799px) {
+@media (max-width: 2799px) {
   .projects {
     display: grid;
   }
@@ -456,23 +456,34 @@ div.info-and-form {
   }
 }
 
-@media (max-with: 2400px) {
+@media (max-width: 2400px) {
   .project-img {
     width: 90%;
     height: 35rem;
   }
 }
 
-@media (max-width: 1600px) {
+@media (max-width: 2200px) {
   .project-img {
-    width: 80%;
-    height: 20rem;
+    width: 100%;
   }
 }
 
-@media (max-with: 1400px) {
+@media (max-width: 1900px) {
   .project-img {
-    width: 90%;
+    height: 30rem;
+  }
+}
+
+@media (max-width: 1750px) {
+  .project-img {
+    height: 25rem;
+  }
+}
+
+@media (max-width: 1400px) {
+  .project-img {
+    height: 20rem;
   }
 }
 
@@ -481,9 +492,13 @@ div.info-and-form {
     margin-left: 2rem;
   }
 }
+@media (max-width: 1160px) {
+  .project-img {
+    height: 18rem;
+  }
+}
 @media (max-with: 1100px) {
   .project-img {
-    width: 100%;
     height: 15rem;
   }
 }
